aevumParser.py
# Generated from aevum.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class aevumParser ( Parser ):

    grammarFileName = "aevum.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'struct'", "'fn'", "'cdecl'", "'let'", 
                     "'('", "')'", "','", "'{'", "'}'", "';'", "':'", "'.'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "STRUCT", "FN", "CDECL", "LET", "LPAREN", 
                      "RPAREN", "COMMA", "LBRACE", "RBRACE", "SEMICOLON", 
                      "COLON", "DOT", "EQ", "Identifier", "Binary_literal", 
                      "Octal_literal", "Hexadecimal_literal", "Decimal_literal", 
                      "Floating_point_literal", "String_literal", "WS", 
                      "Line_comment" ]

    RULE_top_level = 0
    RULE_struct_def = 1
    RULE_struct_body = 2
    RULE_var_decl = 3
    RULE_type_expr = 4
    RULE_cdecl = 5
    RULE_function_def = 6
    RULE_function_decl = 7
    RULE_function_args = 8
    RULE_function_arg_list = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_let_var = 12
    RULE_assignment = 13
    RULE_expression_list = 14
    RULE_expression = 15
    RULE_call_expression = 16
    RULE_dummy_member_expression = 17
    RULE_member_expression = 18
    RULE_atom = 19
    RULE_named_reference = 20
    RULE_literal = 21
    RULE_floating_point_literal = 22
    RULE_string_literal = 23
    RULE_integer_literal = 24

    ruleNames =  [ "top_level", "struct_def", "struct_body", "var_decl", 
                   "type_expr", "cdecl", "function_def", "function_decl", 
                   "function_args", "function_arg_list", "block", "statement", 
                   "let_var", "assignment", "expression_list", "expression", 
                   "call_expression", "dummy_member_expression", "member_expression", 
                   "atom", "named_reference", "literal", "floating_point_literal", 
                   "string_literal", "integer_literal" ]

    EOF = Token.EOF
    STRUCT=1
    FN=2
    CDECL=3
    LET=4
    LPAREN=5
    RPAREN=6
    COMMA=7
    LBRACE=8
    RBRACE=9
    SEMICOLON=10
    COLON=11
    DOT=12
    EQ=13
    Identifier=14
    Binary_literal=15
    Octal_literal=16
    Hexadecimal_literal=17
    Decimal_literal=18
    Floating_point_literal=19
    String_literal=20
    WS=21
    Line_comment=22

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Top_levelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(aevumParser.EOF, 0)

        def struct_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aevumParser.Struct_defContext)
            else:
                return self.getTypedRuleContext(aevumParser.Struct_defContext,i)


        def cdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aevumParser.CdeclContext)
            else:
                return self.getTypedRuleContext(aevumParser.CdeclContext,i)


        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aevumParser.Function_defContext)
            else:
                return self.getTypedRuleContext(aevumParser.Function_defContext,i)


        def getRuleIndex(self):
            return aevumParser.RULE_top_level

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTop_level" ):
                listener.enterTop_level(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTop_level" ):
                listener.exitTop_level(self)




    def top_level(self):

        localctx = aevumParser.Top_levelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_top_level)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aevumParser.STRUCT) | (1 << aevumParser.FN) | (1 << aevumParser.CDECL))) != 0):
                self.state = 53
                token = self._input.LA(1)
                if token in [aevumParser.STRUCT]:
                    self.state = 50
                    self.struct_def()

                elif token in [aevumParser.CDECL]:
                    self.state = 51
                    self.cdecl()

                elif token in [aevumParser.FN]:
                    self.state = 52
                    self.function_def()

                else:
                    raise NoViableAltException(self)

                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(aevumParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Struct_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(aevumParser.STRUCT, 0)

        def Identifier(self):
            return self.getToken(aevumParser.Identifier, 0)

        def LBRACE(self):
            return self.getToken(aevumParser.LBRACE, 0)

        def struct_body(self):
            return self.getTypedRuleContext(aevumParser.Struct_bodyContext,0)


        def RBRACE(self):
            return self.getToken(aevumParser.RBRACE, 0)

        def getRuleIndex(self):
            return aevumParser.RULE_struct_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_def" ):
                listener.enterStruct_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_def" ):
                listener.exitStruct_def(self)




    def struct_def(self):

        localctx = aevumParser.Struct_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_struct_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(aevumParser.STRUCT)
            self.state = 61
            self.match(aevumParser.Identifier)
            self.state = 62
            self.match(aevumParser.LBRACE)
            self.state = 63
            self.struct_body()
            self.state = 64
            self.match(aevumParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Struct_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(aevumParser.Var_declContext,0)


        def COMMA(self):
            return self.getToken(aevumParser.COMMA, 0)

        def struct_body(self):
            return self.getTypedRuleContext(aevumParser.Struct_bodyContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_struct_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_body" ):
                listener.enterStruct_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_body" ):
                listener.exitStruct_body(self)




    def struct_body(self):

        localctx = aevumParser.Struct_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_struct_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.var_decl()
            self.state = 69
            _la = self._input.LA(1)
            if _la==aevumParser.COMMA:
                self.state = 67
                self.match(aevumParser.COMMA)
                self.state = 68
                self.struct_body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(aevumParser.Identifier, 0)

        def COLON(self):
            return self.getToken(aevumParser.COLON, 0)

        def type_expr(self):
            return self.getTypedRuleContext(aevumParser.Type_exprContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = aevumParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(aevumParser.Identifier)
            self.state = 72
            self.match(aevumParser.COLON)
            self.state = 73
            self.type_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(aevumParser.Identifier, 0)

        def getRuleIndex(self):
            return aevumParser.RULE_type_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_expr" ):
                listener.enterType_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_expr" ):
                listener.exitType_expr(self)




    def type_expr(self):

        localctx = aevumParser.Type_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(aevumParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CDECL(self):
            return self.getToken(aevumParser.CDECL, 0)

        def function_decl(self):
            return self.getTypedRuleContext(aevumParser.Function_declContext,0)


        def SEMICOLON(self):
            return self.getToken(aevumParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return aevumParser.RULE_cdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCdecl" ):
                listener.enterCdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCdecl" ):
                listener.exitCdecl(self)




    def cdecl(self):

        localctx = aevumParser.CdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(aevumParser.CDECL)
            self.state = 78
            self.function_decl()
            self.state = 79
            self.match(aevumParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_decl(self):
            return self.getTypedRuleContext(aevumParser.Function_declContext,0)


        def block(self):
            return self.getTypedRuleContext(aevumParser.BlockContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)




    def function_def(self):

        localctx = aevumParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.function_decl()
            self.state = 82
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(aevumParser.FN, 0)

        def Identifier(self):
            return self.getToken(aevumParser.Identifier, 0)

        def function_args(self):
            return self.getTypedRuleContext(aevumParser.Function_argsContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_function_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_decl" ):
                listener.enterFunction_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_decl" ):
                listener.exitFunction_decl(self)




    def function_decl(self):

        localctx = aevumParser.Function_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_function_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(aevumParser.FN)
            self.state = 85
            self.match(aevumParser.Identifier)
            self.state = 86
            self.function_args()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_argsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(aevumParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(aevumParser.RPAREN, 0)

        def function_arg_list(self):
            return self.getTypedRuleContext(aevumParser.Function_arg_listContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_function_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_args" ):
                listener.enterFunction_args(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_args" ):
                listener.exitFunction_args(self)




    def function_args(self):

        localctx = aevumParser.Function_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(aevumParser.LPAREN)
            self.state = 90
            _la = self._input.LA(1)
            if _la==aevumParser.Identifier:
                self.state = 89
                self.function_arg_list()


            self.state = 92
            self.match(aevumParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_arg_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(aevumParser.Var_declContext,0)


        def COMMA(self):
            return self.getToken(aevumParser.COMMA, 0)

        def function_arg_list(self):
            return self.getTypedRuleContext(aevumParser.Function_arg_listContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_function_arg_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_arg_list" ):
                listener.enterFunction_arg_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_arg_list" ):
                listener.exitFunction_arg_list(self)




    def function_arg_list(self):

        localctx = aevumParser.Function_arg_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_arg_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.var_decl()
            self.state = 97
            _la = self._input.LA(1)
            if _la==aevumParser.COMMA:
                self.state = 95
                self.match(aevumParser.COMMA)
                self.state = 96
                self.function_arg_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(aevumParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(aevumParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aevumParser.StatementContext)
            else:
                return self.getTypedRuleContext(aevumParser.StatementContext,i)


        def getRuleIndex(self):
            return aevumParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = aevumParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(aevumParser.LBRACE)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aevumParser.LET) | (1 << aevumParser.Identifier) | (1 << aevumParser.Binary_literal) | (1 << aevumParser.Octal_literal) | (1 << aevumParser.Hexadecimal_literal) | (1 << aevumParser.Decimal_literal) | (1 << aevumParser.Floating_point_literal) | (1 << aevumParser.String_literal))) != 0):
                self.state = 100
                self.statement()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(aevumParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(aevumParser.SEMICOLON, 0)

        def let_var(self):
            return self.getTypedRuleContext(aevumParser.Let_varContext,0)


        def assignment(self):
            return self.getTypedRuleContext(aevumParser.AssignmentContext,0)


        def expression(self):
            return self.getTypedRuleContext(aevumParser.ExpressionContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = aevumParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 108
                self.let_var()
                pass

            elif la_ == 2:
                self.state = 109
                self.assignment()
                pass

            elif la_ == 3:
                self.state = 110
                self.expression()
                pass


            self.state = 113
            self.match(aevumParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Let_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(aevumParser.LET, 0)

        def var_decl(self):
            return self.getTypedRuleContext(aevumParser.Var_declContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_let_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLet_var" ):
                listener.enterLet_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLet_var" ):
                listener.exitLet_var(self)




    def let_var(self):

        localctx = aevumParser.Let_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_let_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(aevumParser.LET)
            self.state = 116
            self.var_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(aevumParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(aevumParser.ExpressionContext,i)


        def EQ(self):
            return self.getToken(aevumParser.EQ, 0)

        def getRuleIndex(self):
            return aevumParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = aevumParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.expression()
            self.state = 119
            self.match(aevumParser.EQ)
            self.state = 120
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(aevumParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(aevumParser.COMMA, 0)

        def expression_list(self):
            return self.getTypedRuleContext(aevumParser.Expression_listContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_expression_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_list" ):
                listener.enterExpression_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_list" ):
                listener.exitExpression_list(self)




    def expression_list(self):

        localctx = aevumParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expression_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.expression()
            self.state = 125
            _la = self._input.LA(1)
            if _la==aevumParser.COMMA:
                self.state = 123
                self.match(aevumParser.COMMA)
                self.state = 124
                self.expression_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call_expression(self):
            return self.getTypedRuleContext(aevumParser.Call_expressionContext,0)


        def dummy_member_expression(self):
            return self.getTypedRuleContext(aevumParser.Dummy_member_expressionContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = aevumParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.state = 129
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.call_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.dummy_member_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Call_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dummy_member_expression(self):
            return self.getTypedRuleContext(aevumParser.Dummy_member_expressionContext,0)


        def LPAREN(self):
            return self.getToken(aevumParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(aevumParser.RPAREN, 0)

        def expression_list(self):
            return self.getTypedRuleContext(aevumParser.Expression_listContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_call_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall_expression" ):
                listener.enterCall_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall_expression" ):
                listener.exitCall_expression(self)




    def call_expression(self):

        localctx = aevumParser.Call_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_call_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.dummy_member_expression()

            self.state = 132
            self.match(aevumParser.LPAREN)
            self.state = 134
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << aevumParser.Identifier) | (1 << aevumParser.Binary_literal) | (1 << aevumParser.Octal_literal) | (1 << aevumParser.Hexadecimal_literal) | (1 << aevumParser.Decimal_literal) | (1 << aevumParser.Floating_point_literal) | (1 << aevumParser.String_literal))) != 0):
                self.state = 133
                self.expression_list()


            self.state = 136
            self.match(aevumParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Dummy_member_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member_expression(self):
            return self.getTypedRuleContext(aevumParser.Member_expressionContext,0)


        def atom(self):
            return self.getTypedRuleContext(aevumParser.AtomContext,0)


        def getRuleIndex(self):
            return aevumParser.RULE_dummy_member_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDummy_member_expression" ):
                listener.enterDummy_member_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDummy_member_expression" ):
                listener.exitDummy_member_expression(self)




    def dummy_member_expression(self):

        localctx = aevumParser.Dummy_member_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_dummy_member_expression)
        try:
            self.state = 140
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.member_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.atom()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Member_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(aevumParser.AtomContext,0)


        def DOT(self):
            return self.getToken(aevumParser.DOT, 0)

        def Identifier(self):
            return self.getToken(aevumParser.Identifier, 0)

        def getRuleIndex(self):
            return aevumParser.RULE_member_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember_expression" ):
                listener.enterMember_expression(self)
